--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   http: ^0.13.3
   cached_network_image: ^3.2.0
   staggered_grid_view_flutter: ^0.0.4
+  flutter_bloc: ^8.1.1
+  equatable: ^2.0.5
+  flutter_staggered_grid_view: ^0.6.2
 
 dev_dependencies:
   flutter_test:
